@@ -117,6 +117,9 @@ balsa_print_objects_append_from_body(GList * list,
         !g_ascii_strcasecmp("text/directory", conttype))
 	return balsa_print_object_text_vcard(list, context, mime_body, psetup);
 
+    if (!g_ascii_strcasecmp("text/calendar", conttype))
+	return balsa_print_object_text_calendar(list, context, mime_body, psetup);
+
     if (!g_ascii_strcasecmp("text/plain", conttype))
 	return balsa_print_object_text_plain(list, context, mime_body, psetup);
 
